Handler logic and more tests
Handlers now primitively mimic some functions of the EFA API. Added corresponding unit tests

TODO: forward requests to "full" EFA backend
TODO: tests: validate response body as well, not just status code
